# Trumall

./: ADDRESS_MANAGEMENT_SOLUTION.md  QUICK_REFERENCE_ROLES.md  ROLE_BASED_INTEGRATION_GUIDE.md  ROLE_IMPLEMENTATION_SUMMARY.md  SHIPPING_FRONTEND_AUDIT.md  SHIPPING_STATUS_SUMMARY.md  main.rs
backend/: .env  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  ROLE_BASED_AUDIT_REPORT.md  SHIPPING_IMPLEMENTATION.md  docker-compose.yml  go.mod  go.sum
backend/Trumall-backend/: Cargo.toml
backend/Trumall-backend/src/: main.rs  models.rs  services.rs  web_server.rs
backend/migrations/: 000001_init.down.sql  000001_init.up.sql  000003_create_cart_items_table.up.sql  000004_change_user_role_to_roles.down.sql  000004_change_user_role_to_roles.up.sql  000005_add_image_url_to_products.down.sql  000006_create_product_images_table.down.sql  000006_create_product_images_table.up.sql  000007_add_checkout_request_id_to_payments.down.sql  000007_add_checkout_request_id_to_payments.up.sql  000008_add_mpesa_receipt_and_phone_to_payments.down.sql  000008_add_mpesa_receipt_and_phone_to_payments.up.sql  000009_add_soroban_tx_id_to_payments.down.sql  000009_add_soroban_tx_id_to_payments.up.sql  000010_create_addresses.down.sql  000010_create_addresses.up.sql  000011_add_shipping_details_to_orders_table.down.sql  000011_add_shipping_details_to_orders_table.up.sql  000012_add_deleted_at_to_addresses_table.down.sql  000012_add_deleted_at_to_addresses_table.up.sql  000013_create_shipping_methods_table.up.sql  (+11 more)
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
(+175 files in other folders)
